# differential-evolution

./: CMakeLists.txt  README.md
cpu/: CMakeLists.txt  cpuInterface.cpp  cpuInterface.h
cpu/DE/: TestFunctions.h
gpu/: CMakeLists.txt  main.cu
gpu/src/: DifferentialEvolution.cu  DifferentialEvolution.cuh  deGPU.cu  deGPU.cuh
